rework cart-overlay

--- a/project/index.html
+++ b/project/index.html
@@ -133,18 +133,24 @@
                     </button>
                 </li>
 
-                <li class="list-toolbar__item-toolbar">
-
-                    <a class="item-toolbar__link link" href="./cart.html">
+                <li class="list-toolbar__item-toolbar-tablet">
+                    <a class="item-toolbar-tablet__button button button--padding-sm" href="./cart.html">
                         <i class="fa-solid fa-cart-shopping">
                             (2)
                         </i>
                     </a>
+                </li>
 
-                    <!-- <div class="wrapper-cart-body">
+                <li class="list-toolbar__item-toolbar cart">
+                    <input class="input-dev-helper" id="cart-overlay" type="checkbox">
 
+                    <label class="item-toolbar__button button" for="cart-overlay" >
+                        <i class="fa-solid fa-cart-shopping">
+                            (2)
+                        </i>
+                    </label>
 
-
+                    <div class="wrapper-cart-body">
                         <div class="wrapper-cart-titles">
                             <h3 class="wrapper-cart-titles__title-product title">
                                 PRODUCT
@@ -157,9 +163,9 @@
                             <h3 class="wrapper-cart-titles__title-subtotal title">
                                 SUBTOTAL
                             </h3>
-                        </div> -->
+                        </div>
 
-                        <!-- <ul class="wrapper-cart-body__list">
+                        <ul class="wrapper-cart-body__list">
                             <li class="wrapper-cart-body__item">
                                 <div class="wrapper-product-short-description">
                                     <picture>
@@ -168,8 +174,8 @@
                                         <img class="wrapper-product-short-description__image" src="./images/product/iphone-1.jpg" alt="Iphone 13">
                                     </picture>
 
-                                    <div class="wrapper-product-title title">
-                                        <h3>
+                                    <div class="wrapper-select-product-title ">
+                                        <h3 class="title">
                                             IPHONE 13
                                         </h3>
 
@@ -180,7 +186,7 @@
                                 </div>
 
                                 <div class="wrapper-counter">
-                                    <button class="button">
+                                    <button class="button button--border-sm button--padding-sm-tp-1">
                                         -
                                     </button>
 
@@ -188,20 +194,20 @@
                                         1
                                     </div>
 
-                                    <button class="button">
+                                    <button class="button button--border-sm button--padding-sm-tp-1">
                                         +
                                     </button>
                                 </div>
 
                                 <div class="wrapper-subtotal-product-price">
-                                    <p class="description-product-price-without-discount price price--bigger">
+                                    <p class="description-product-price-without-discount price ">
                                         $1500.00
                                     </p>
                                 </div>
 
                                 <div class="wrapper-delete-position">
-                                    <button>
-                                        <i class="fa-solid fa-x"></i>
+                                    <button class="button">
+                                        <i class="badge badge--large badge--lighter fa-solid fa-x"></i>
                                     </button>
                                 </div>
                             </li>
@@ -214,8 +220,8 @@
                                         <img class="wrapper-product-short-description__image" src="./images/product/apple-watch.jpg" alt="Apple watch pink">
                                     </picture>
 
-                                    <div class="wrapper-product-title title">
-                                        <h3>
+                                    <div class="wrapper-select-product-title ">
+                                        <h3 class="title">
                                             PINK WATCH
                                         </h3>
 
@@ -226,7 +232,7 @@
                                 </div>
 
                                 <div class="wrapper-counter">
-                                    <button class="button">
+                                    <button class="button button--border-sm button--padding-sm-tp-1">
                                         -
                                     </button>
 
@@ -234,31 +240,31 @@
                                         1
                                     </div>
 
-                                    <button class="button">
+                                    <button class="button button--border-sm button--padding-sm-tp-1">
                                         +
                                     </button>
                                 </div>
 
                                 <div class="wrapper-subtotal-product-price">
-                                    <p class="description-product-price-without-discount price price--bigger">
+                                    <p class="description-product-price-without-discount price ">
                                         $870.00
                                     </p>
                                 </div>
 
                                 <div class="wrapper-delete-position">
-                                    <button>
-                                        <i class="fa-solid fa-x"></i>
+                                    <button class="button">
+                                        <i class="badge badge--large badge--lighter fa-solid fa-x"></i>
                                     </button>
                                 </div>
                             </li>
                         </ul>
 
-                        <h2>
+                        <h2 class="title title--jost-30">
                             CART TOTALS
                         </h2>
 
                         <div class="wrapper-sub-total-price">
-                            <h3>
+                            <h3 class="wrapper-sub-total-price__title title title--select">
                                 SUBTOTAL
                             </h3>
 
@@ -268,32 +274,32 @@
                         </div>
 
                         <div class="wrapper-total-price">
-                            <h3>
+                            <h3 class="wrapper-total-price_title title title--select">
                                 TOTAL
                             </h3>
 
-                            <p class="description-product-price-without-discount price">
+                            <p class="description-product-price-without-discount price ">
                                 $2370.00
                             </p>
                         </div>
 
                         <div class="wrapper-cart-buttons">
-                            <button>
+                            <button class="button button--darker button--padding-lrg">
                                 UPDATE CART
                             </button>
 
-                            <a class="button" href="./shop.html">
+                            <a class="button button--darker button--padding-lrg" href="./shop.html">
                                 CONTINUE SHOPPING
                             </a>
 
 
-                            <a class="button" href="./checkout.html">
-                                Proceed to checkout
+                            <a class="button button--darker button--padding-lrg" href="./checkout.html">
+                                PROCEED TO CHECKOUT
                             </a>
 
                         </div>
 
-                    </div> -->
+                    </div>
                 </li>
             </ul>
         </nav>
