create subscribe section

--- a/project/index.html
+++ b/project/index.html
@@ -284,16 +284,16 @@
                         </div>
 
                         <div class="wrapper-cart-buttons">
-                            <button class="button button--darker button--padding-lrg">
+                            <button class="button button--secondary-color button--padding-lrg">
                                 UPDATE CART
                             </button>
 
-                            <a class="button button--darker button--padding-lrg" href="./shop.html">
+                            <a class="button button--secondary-color button--padding-lrg" href="./shop.html">
                                 CONTINUE SHOPPING
                             </a>
 
 
-                            <a class="button button--darker button--padding-lrg" href="./checkout.html">
+                            <a class="button button--secondary-color button--padding-lrg" href="./checkout.html">
                                 PROCEED TO CHECKOUT
                             </a>
 
