create quotes section

--- a/project/index.html
+++ b/project/index.html
@@ -207,7 +207,7 @@
 
                                 <div class="wrapper-delete-position">
                                     <button class="button">
-                                        <i class="badge badge--large badge--lighter fa-solid fa-x"></i>
+                                        <i class="badge badge--large  fa-solid fa-x"></i>
                                     </button>
                                 </div>
                             </li>
@@ -253,7 +253,7 @@
 
                                 <div class="wrapper-delete-position">
                                     <button class="button">
-                                        <i class="badge badge--large badge--lighter fa-solid fa-x"></i>
+                                        <i class="badge badge--large  fa-solid fa-x"></i>
                                     </button>
                                 </div>
                             </li>
