finish main page(create section-blogs-cards, section-seasonal-offers section-tagline),about page(create section-store-foundation) ,start shop page(section-selling-items(not finished))

--- a/project/index.html
+++ b/project/index.html
@@ -813,6 +813,78 @@
             </div>
         </section>
 
+
+        <section class="section-seasonal-offers">
+            <h2 class="section-seasonal-offers__title title title--jost-83">
+                <span class="section-seasonal-offers__sub-title title title--jost-30">
+                    — 10% off<br>
+                </span>
+                NEW YEAR SALE
+            </h2>
+
+            <img class="section-seasonal-offers__image"
+                src="./images/seasonal offers images/aram-sabah-smVUoz8CSCw-unsplash.png"
+                alt="Black iphone 13 on his black box">
+
+
+            <a class="button button--padding-bigger button--secondary-color" href="./shop.html">
+                SHOP SALE
+            </a>
+        </section>
+
+
+
+
+        <section class="section-blogs-cards">
+            <div class="wrapper-blogs-cards-title">
+                <h2 class="title title--jost-30">
+                    LATEST POSTS
+                </h2>
+
+                <a class="link link--ellipsis-border" href="./blogs.html">
+                    READ BLOGS
+                </a>
+            </div>
+
+            <ul class="section-blogs-cards__list">
+                <li class="section-blogs-cards__item">
+                    <img src="./images/section-blogs-cards/david-svihovec-uyu_IZPC73U-unsplash.jpg"
+                        alt="White Playstation 5">
+
+                    <h3 class="title title--jost-20">
+                        <span class="title title--jost-13">FEB 22, 2023 - GADGETS <br></span>
+
+                        GET SOME COOL GADGETS IN 2023
+                    </h3>
+                </li>
+
+                <li class="section-blogs-cards__item">
+                    <img src="./images/section-blogs-cards/matthew-brodeur-oSvR0wGYUBs-unsplash.jpg"
+                        alt="Black apple watch">
+
+                    <h3 class="title title--jost-20">
+                        <span class="title title--jost-13">FEB 22, 2023 - TECHNOLOGY <br></span>
+
+                        TECHNOLOGY HACK YOU WON'T GET
+                    </h3>
+                </li>
+
+                <li class="section-blogs-cards__item">
+                    <img src="./images/section-blogs-cards/eniko-kis-KsLPTsYaqIQ-unsplash 1.jpg" alt="GoPro camera">
+
+                    <h3 class="title title--jost-20">
+                        <span class="title title--jost-13">FEB 22, 2023 - CAMERA <br></span>
+
+                        TOP 10 SMALL CAMERA IN THE WORLD
+                    </h3>
+                </li>
+            </ul>
+
+        </section>
+
+
+
+
         <section class="section-quotes">
             <div class="wrapper-quotes-icon">
                 <svg width="5rem" height="4rem" viewBox="0 0 92 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1020,7 +1092,7 @@
 
                 <ul class="section-footer-main-content__list">
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding" href="./index.html">
+                        <a class="link  link--without-padding link--selected" href="./index.html">
                             HOME
                         </a>
                     </li>
