finish shop page (finish section-selling-items)

--- a/project/shop.html
+++ b/project/shop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
+
 <body>
     <header class="header">
         <h1 class="title title--jost-33">
@@ -303,7 +305,6 @@
         </nav>
     </header>
 
-
     <main class="main">
         <section class="section-page-information-card">
 
@@ -319,6 +320,357 @@
                     Shop
                 </a>
             </p>
+        </section>
+
+
+        <section class="section-selling-items">
+            <h2 class="hide-title">
+                This is selling section
+            </h2>
+
+            <main class="section-selling-items__main-selling-part">
+                <div class="wrapper-selling-items-header-description">
+                    <p class="description">Showing 1-9 of 55 results</p>
+
+                    <p class="description">Default sorting</p>
+                </div>
+
+                <ul class="main-selling-part__list">
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/1.jpg"
+                                alt="Grey Iphone 10">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">IPHONE 10</h3>
+
+                            <p class="price">$980</p>
+                        </div>
+                    </li>
+
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/2.jpg"
+                                alt="Black Iphone 11">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">IPHONE 11</h3>
+
+                            <p class="price">$1100</p>
+                        </div>
+                    </li>
+
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/3.jpg"
+                                alt="White Iphone 8">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">IPHONE 8</h3>
+
+                            <p class="price">$780</p>
+                        </div>
+                    </li>
+
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/4.jpg"
+                                alt="Pink apple watch">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">PINK WATCH</h3>
+
+                            <p class="price">$870</p>
+                        </div>
+                    </li>
+
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/5.jpg"
+                                alt="Black sport apple watch">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">HEAVY WATCH</h3>
+
+                            <p class="price">$680</p>
+                        </div>
+                    </li>
+
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/6.jpg"
+                                alt="Black apple watch">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">SPOTTED WATCH</h3>
+
+                            <p class="price">$750</p>
+                        </div>
+                    </li>
+
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/7.jpg"
+                                alt="Black apple watch">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">SPOTTED WATCH</h3>
+
+                            <p class="price">$750</p>
+                        </div>
+                    </li>
+
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/8.jpg"
+                                alt="Black sport apple watch">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">BLACK WATCH</h3>
+
+                            <p class="price">$650</p>
+                        </div>
+                    </li>
+
+                    <li class="main-selling-part__item">
+                        <div class="wrapper-selling-item-image">
+                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/9.jpg"
+                                alt="Black Iphone 13">
+
+                            <button class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
+                                ADD TO CART
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
+
+                        <div class="wrapper-selling-item-description">
+                            <h3 class="title title--jost-20">IPHONE 13</h3>
+
+                            <p class="price">$1500</p>
+                        </div>
+                    </li>
+                </ul>
+
+                <div class="wrapper-selling-items-switcher-buttons">
+                    <div class="wrapper-back-switcher-button-selling-items">
+                        <button class="wrapper-back-switcher-button-selling-items__button button">
+                            <i class="badge badge--third-color badge--bigger fa-solid fa-chevron-left"></i>
+                        </button>
+                    </div>
+
+                    <div class="wrapper-selling-items-list-switcher-buttons">
+                        <button class="button button--fourth-color">
+                            1
+                        </button>
+
+                        <button class="button button--fourth-color">
+                            2
+                        </button>
+
+                        <button class="button button--fourth-color">
+                            3
+                        </button>
+                    </div>
+
+                    <div class="wrapper-next-switcher-button-selling-items">
+                        <button class="wrapper-next-switcher-button-selling-items__button button">
+                            <i class="badge badge--secondary-color badge--bigger fa-solid fa-chevron-right"></i>
+                        </button>
+                    </div>
+                </div>
+            </main>
+
+            <aside class="section-selling-items__aside-selling-part">
+                <div class="wrapper-search-selling-items-form">
+                    <input class="input input--padding-third input--shorter" type="text" placeholder="Search">
+
+                    <button class="button button--secondary-color button--padding-sm" type="submit">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+
+                <section class="section-switcher-type-selling-items">
+                    <h3 class="title title--jost-20 title--select">
+                        CATEGORIES
+                    </h3>
+
+                    <ul class="section-switcher-type-selling-items__list">
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding  button--fourth-color">
+                                All
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Phones
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Accessories
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Tablets
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Watches
+                            </button>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="section-switcher-type-selling-items">
+                    <h3 class="title title--jost-20 title--select">
+                        TAGS
+                    </h3>
+
+                    <ul class="section-switcher-type-selling-items__list">
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                White
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Cheap
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Mobile
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Modern
+                            </button>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="section-switcher-type-selling-items">
+                    <h3 class="title title--jost-20 title--select">
+                        BRANDS
+                    </h3>
+
+                    <ul class="section-switcher-type-selling-items__list">
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Apple
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Samsung
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Green
+                            </button>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="section-switcher-type-selling-items">
+                    <h3 class="title title--jost-20 title--select">
+                        FILTER BY PRICE
+                    </h3>
+
+                    <ul class="section-switcher-type-selling-items__list">
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                Less than $10
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                $10- $20
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                $20- $30
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                $30- $40
+                            </button>
+                        </li>
+
+                        <li class="section-switcher-type-selling-items__item">
+                            <button class="button button--no-padding ">
+                                $40- $50
+                            </button>
+                        </li>
+                    </ul>
+                </section>
+            </aside>
         </section>
 
         <section class="section-subscribe">
@@ -343,7 +695,6 @@
                 </form>
             </div>
         </section>
-
 
         <section class="section-insta-shop">
             <div class="wrapper-title-insta-shop">
@@ -657,4 +1008,5 @@
         </section>
     </footer>
 </body>
+
 </html>
